Fixed: logo stretch on safari.

--- a/assets/css/base/_elements.scss
+++ b/assets/css/base/_elements.scss
@@ -221,6 +221,10 @@ table {
 			height: 15em;
 			width: 15em;
 		}
+
+		img {
+			object-fit: contain;
+		}
 	}
 }
 
