--- a/assets/css/components/_navigation.scss
+++ b/assets/css/components/_navigation.scss
@@ -150,11 +150,13 @@
 
 	.custom-logo-link {
 		display: flex;
+		align-items: center;
 
 		img {
 			// max-width: 160px;
 			transition: all 0.2s linear;
 			max-width: 150px;
+			object-fit: contain;
 
 			@media screen and (min-width: 992px) {
 				max-width: 175px;
